numptyphysics (0.2) unstable; urgency=low

  * Bug fixes, more levels

 -- Tim Edmonds <tmedmonds@gmail.com>  Thu, 3 Apr 2008 15:48:31 +0000

numptyphysics (0.1) unstable; urgency=low

  * Initial Release

 -- Tim Edmonds <tmedmonds@gmail.com>  Thu, 13 Mar 2008 15:48:31 +0000
