@@ -1,6 +1,10 @@
 numptyphysics (0.2) unstable; urgency=low
 
-  * Bug fixes, more levels
+  * improved editor
+  * more levels
+  * web catalog
+  * mimetype/hildon integration
+  * bug fixes  
 
  -- Tim Edmonds <tmedmonds@gmail.com>  Thu, 3 Apr 2008 15:48:31 +0000
 
